--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,5 +3,8 @@ pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   es_data_template: es_data_template.html
-last_built: 2024-04-03T20:57Z
+last_built: 2024-04-03T21:09Z
+urls:
+  reference: https://gilesjohnr.github.io/es/reference
+  article: https://gilesjohnr.github.io/es/articles
 
