--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2024-02-22
 Authors@R: c(person("John R", "Giles", role=c("aut", "cre"), email="john.giles@gatesfoundation.org"))
 Maintainer: John R Giles <john.giles@gatesfoundation.org>
 Description: Tools for analyzing output from Taqman Array Cards and other sources of environmental sampling data
-License: CC0 1.0 Universal
+License: CC BY 4.0
 URL: https://github.com/gilesjohnr/es, https://gilesjohnr.github.io/es/
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
@@ -16,9 +16,9 @@ Imports:
   stringr,
   glue,
   data.table,
+  HDInterval,
   progress,
-  pbapply,
-  sp
+  pbapply
 Depends: 
   R (>= 3.5.0),
   stats, 
