--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,6 @@
 pandoc: 3.1.1
 pkgdown: 2.0.7
 pkgdown_sha: ~
-articles:
-  es_data_template: es_data_template.html
-last_built: 2024-04-03T21:29Z
+articles: {}
+last_built: 2024-04-03T22:11Z
 
