updates to precip func

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,10 +14,13 @@ Encoding: UTF-8
 LazyData: true
 Imports:
   glue,
+  foreach,
   data.table,
+  dplyr,
   HDInterval,
   progress,
-  pbapply
+  pbapply,
+  chirps
 Depends: 
   R (>= 3.5.0),
   stats, 
