--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,2 +1,3 @@
 exportPattern("^[[:alpha:]]+")
 importFrom("stats", "complete.cases", "lm", "median", "predict")
+importFrom("foreach", "foreach", "%:%", "%do%")
