switching to openmeteo and adding get temp func

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,4 @@
 exportPattern("^[[:alpha:]]+")
 importFrom("stats", "complete.cases", "lm", "median", "predict")
 importFrom("foreach", "foreach", "%:%", "%do%")
+importFrom("stats", "aggregate")
