adding vignettes: templates and metadata

--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,8 @@
 pandoc: 3.1.12.3
 pkgdown: 2.0.7
 pkgdown_sha: ~
-articles: {}
-last_built: 2024-04-12T21:49Z
+articles:
+  metadata_functions: metadata_functions.html
+  template_es_data: template_es_data.html
+last_built: 2024-04-15T19:18Z
 
