--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,3 +2,9 @@ url: ~
 template:
   bootstrap: 5
 
+articles:
+- title: Vignettes
+  navbar: ~
+  contents:
+  - template_es_data
+  - metadata_functions
