adding get hydro func and removing get topo func

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,14 +18,14 @@ Imports:
   data.table,
   dplyr,
   ggplot2,
-  ggrepel,
-  gridExtra,
   HDInterval,
   progress,
   pbapply,
   zoo,
   openmeteo,
   chirps,
+  whitebox,
+  exactextractr,
   elevatr,
   raster,
   sp,
