--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,4 @@ importFrom("foreach", "foreach", "%:%", "%do%")
 importFrom("ggplot2", "ggplot", "scale_fill_viridis_c", "coord_equal", "theme",
            "theme_void", "element_text", "element_blank", "unit", "geom_raster",
            "aes", "geom_point")
+importFrom("sp", "CRS")
