--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Imports:
   geodata,
   rworldmap,
   terra,
-  tidyterra
+  tidyterra,
+  httr
 Depends: 
   R (>= 3.5.0),
   stats, 
@@ -42,5 +43,6 @@ Depends:
   utils
 Suggests: 
   knitr, 
-  rmarkdown
+  rmarkdown,
+  rworldxtra
 VignetteBuilder: knitr
