--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,4 @@ importFrom("ggplot2", "ggplot", "scale_fill_viridis_c", "coord_equal", "theme",
            "theme_void", "element_text", "element_blank", "unit", "geom_raster",
            "aes", "geom_point")
 importFrom("sp", "CRS")
+importFrom("utils", "download.file")
