--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,14 +1,19 @@
 url: https://gilesjohnr.github.io/es/
 template:
   bootstrap: 5
-  params:
-    ganalytics: G-HQPXKPQH2C
-articles:
-- title: Vignettes
-  navbar: Vignettes
-  contents:
-  - template_es_data
-  - metadata_functions
+  pkgdown-nav-height: 80px
+  bslib:
+    primary: "#3d5d72"
+    border-radius: 0.5rem
+    btn-border-radius: 0.25rem
+    danger: "#A6081A"
+params:
+     ganalytics: G-HQPXKPQH2C
+navbar:
+  bg: primary
+  structure:
+    left:  [intro, reference, articles, tutorials, news]
+    right: [search, github]
 reference:
 - title: Data Standards
   contents: starts_with("template_")
@@ -28,3 +33,14 @@ reference:
   - download_worldpop_data
   - coords_to_iso3
   - logmean
+articles:
+- title: Vignettes
+  navbar: Vignettes
+  contents:
+  - template_es_data
+  - metadata_functions
+  - calc_local_population
+news:
+  releases:
+  - text: "Version 0.0.1"
+    href: https://github.com/gilesjohnr/es
