adding climate data vignette, updates to docs, es icon

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -39,6 +39,8 @@ articles:
   contents:
   - template_es_data
   - metadata_functions
+  - get_climate_data
+  - calc_hydro_variables
   - calc_local_population
 news:
   releases:
