--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,10 +2,12 @@ pandoc: 3.1.12.3
 pkgdown: 2.0.9
 pkgdown_sha: ~
 articles:
+  calc_hydro_variables: calc_hydro_variables.html
   calc_local_population: calc_local_population.html
+  get_climate_data: get_climate_data.html
   metadata_functions: metadata_functions.html
   template_es_data: template_es_data.html
-last_built: 2024-05-23T19:22Z
+last_built: 2024-05-23T23:09Z
 urls:
   reference: https://gilesjohnr.github.io/es/reference
   article: https://gilesjohnr.github.io/es/articles
