first round updates to get_admin_data, geodata archived

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,5 @@ importFrom("sp", "CRS")
 importFrom("utils", "download.file")
 importFrom("RCurl", "getURL")
 importFrom("XML", "getHTMLLinks")
+importFrom("httr", "GET", "content")
+importFrom("jsonlite", "fromJSON")
