--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,6 @@ Imports:
   data.table,
   dplyr,
   HDInterval,
-  progress,
   zoo,
   openmeteo,
   chirps,
@@ -28,12 +27,12 @@ Imports:
   raster,
   sp,
   sf,
-  geodata,
   rworldmap,
-  terra,
   stars,
   RCurl,
-  XML
+  XML,
+  httr,
+  jsonlite
 Depends: 
   R (>= 3.5.0),
   stats, 
